Continued: Pseudorandom number generation

--- a/numpy-notes/numpy_notes.ipynb
+++ b/numpy-notes/numpy_notes.ipynb
@@ -2094,7 +2094,7 @@
     "  - Determinants\n",
     "  - Eigenvalues and eigenvectors\n",
     "\n",
-    "✅ These are implemented under the hood using **industry-standard linear algebra libraries** (BLAS, LAPACK, Intel MKL depending on your NumPy build), ensuring performance comparable to MATLAB or R.\n",
+    "These are implemented under the hood using **industry-standard linear algebra libraries** (BLAS, LAPACK, Intel MKL depending on your NumPy build), ensuring performance comparable to MATLAB or R.\n",
     "\n",
     "---\n",
     "\n",
@@ -2118,14 +2118,341 @@
     "\n",
     "### Why This Is Useful\n",
     "\n",
-    "✅ Essential for:\n",
+    "Essential for:\n",
     "- Solving systems of linear equations\n",
     "- Computing projections in ML models\n",
     "- Dimensionality reduction (SVD, PCA)\n",
     "- Feature engineering and data transformations\n",
     "\n",
-    "✅ Allows leveraging **high-performance, vectorized, and compiled operations** within Python workflows without leaving the `NumPy` ecosystem.\n",
+    "Allows leveraging **high-performance, vectorized, and compiled operations** within Python workflows without leaving the `NumPy` ecosystem.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "03183ad5-da4b-4431-8a49-907c9f03a1c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([[1., 2., 3.], [4., 5., 6.]])\n",
+    "y = np.array([[6., 23.], [-1, 7], [8, 9]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "50d9344b-ca84-4bb4-ae4d-dfb78cbb5815",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 28.,  64.],\n",
+       "       [ 67., 181.]])"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.dot(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "66cc7384-6cb6-4ab6-b45d-a0d80a7f69ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 28.,  64.],\n",
+       "       [ 67., 181.]])"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#x.dot(y) is equivalent to np.dot(x, y):\n",
+    "np.dot(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "f2698956-23f6-4c19-adde-c4b78bee9082",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6., 15.])"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A matrix product between a two-dimensional array and a suitably sized one-dimensional array results in a one-dimensional array:\n",
+    "np.dot(x, np.ones(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "21d62009-4a44-4fd0-99b0-af30380e51d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.47371119,  2.29361449,  3.88688806, -1.429761  , -0.93356753],\n",
+       "       [ 2.29361449,  3.34100593,  3.41885385, -0.0821731 ,  0.96946278],\n",
+       "       [ 3.88688806,  3.41885385,  5.92212524,  0.13624728, -2.00599762],\n",
+       "       [-1.429761  , -0.0821731 ,  0.13624728,  2.54657194, -0.98180076],\n",
+       "       [-0.93356753,  0.96946278, -2.00599762, -0.98180076,  6.41212596]])"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from numpy.linalg import inv, qr\n",
+    "\n",
+    "X = np.random.randn(5, 5)\n",
+    "mat = X.T.dot(X) \n",
+    "mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "536c397a-daa0-4494-a4cc-67acd211ca73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[115.15294405,  -4.32144907, -72.8712448 ,  70.49957784,\n",
+       "          5.41622682],\n",
+       "       [ -4.32144907,   1.93780965,   1.48194184,  -2.78415531,\n",
+       "         -0.88484114],\n",
+       "       [-72.8712448 ,   1.48194184,  47.18765274, -44.50245504,\n",
+       "         -2.88533638],\n",
+       "       [ 70.49957784,  -2.78415531, -44.50245504,  43.59072371,\n",
+       "          3.43736825],\n",
+       "       [  5.41622682,  -0.88484114,  -2.88533638,   3.43736825,\n",
+       "          0.70196171]])"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inv(mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "2f44aa04-04e8-4c51-aa7b-512890850b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q: [[-0.58424211  0.18222319  0.21463893  0.03698213  0.76027516]\n",
+      " [-0.38576211 -0.58684111  0.00889584 -0.70092729 -0.12420505]\n",
+      " [-0.65373416 -0.12611869 -0.32960066  0.53296577 -0.40501435]\n",
+      " [ 0.24047094 -0.40867244 -0.72739848  0.11507767  0.482503  ]\n",
+      " [ 0.15701635 -0.66294279  0.56223292  0.45829889  0.09853429]]\n",
+      "r: [[-5.94567074 -4.73141994 -7.74345442  1.23617411  2.25355069]\n",
+      " [ 0.         -2.58298771 -0.77075238 -0.61933241 -4.33568222]\n",
+      " [ 0.          0.         -2.31418927 -2.75689383  4.78869104]\n",
+      " [ 0.          0.          0.         -0.07956773  1.04251054]\n",
+      " [ 0.          0.          0.          0.          0.14036989]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "q, r = qr(mat)\n",
+    "print(f\"q: {q}\")\n",
+    "print(f\"r: {r}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "216fa9a7-a22b-4738-a091-7fe611fde194",
+   "metadata": {},
+   "source": [
+    "## Pseudorandom Number Generation in NumPy\n",
+    "\n",
+    "The `numpy.random` module **extends Python’s built-in `random` module** with functions for **efficiently generating entire arrays of sample values from various probability distributions.**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Key Points\n",
+    "\n",
+    "- **Pseudorandom numbers** are generated **algorithmically with deterministic behavior** based on the **seed** of the random number generator.  \n",
+    "- You can control reproducibility in experiments using `np.random.seed` to set the global random seed.\n",
+    "\n",
+    "- By default, **NumPy uses a global random state**. To **avoid global state** and ensure isolated reproducible streams of random numbers, you can use `numpy.random.RandomState` to create independent random number generators.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Table: Commonly Used `numpy.random` Functions\n",
+    "\n",
+    "| **Function** | **Description** |\n",
+    "|--------------|-----------------|\n",
+    "| `seed` | Seed the random number generator for reproducibility |\n",
+    "| `permutation` | Return a random permutation of a sequence, or a permuted range |\n",
+    "| `shuffle` | Randomly permute a sequence in place |\n",
+    "| `rand` | Draw samples from a uniform distribution (0, 1) |\n",
+    "| `randint` | Draw random integers from a specified low-to-high range |\n",
+    "| `randn` | Draw samples from a normal distribution with mean 0 and standard deviation 1 (MATLAB-like interface) |\n",
+    "| `binomial` | Draw samples from a binomial distribution |\n",
+    "| `normal` | Draw samples from a normal (Gaussian) distribution with specified mean and standard deviation |\n",
+    "| `beta` | Draw samples from a beta distribution |\n",
+    "| `chisquare` | Draw samples from a chi-square distribution |\n",
+    "| `gamma` | Draw samples from a gamma distribution |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Why This Is Useful\n",
+    "\n",
+    "Allows **vectorized, efficient generation of random samples** for:\n",
+    "- Simulations\n",
+    "- Testing algorithms\n",
+    "- Bootstrapping\n",
+    "- Random sampling in ML and statistics workflows\n",
+    "\n",
+    "Supports **drawing samples from a wide range of distributions** necessary for scientific and data analysis tasks.\n",
+    "\n",
+    "Ensures **reproducibility in experiments and projects** when seeds are controlled.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "3fe263fc-0f53-4729-9a9c-2ec95979595a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.09352808, -1.97697016, -0.72248945, -1.90348001],\n",
+       "       [ 2.0844397 , -0.74573166, -0.27384203, -0.6742514 ],\n",
+       "       [ 0.25954813,  1.61200006,  1.31436317, -1.0103195 ],\n",
+       "       [-0.61628387, -1.36889529, -1.11355765, -0.05586944]])"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samples = np.random.normal(size=(4, 4))\n",
+    "samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "id": "838e6cc4-1f0e-4f52-ab78-19ffd3759b58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#change NumPy’s random number generation seed using np.random.seed\n",
+    "np.random.seed(1234)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "384b56a1-d106-4ef2-835a-38ee2ea15cd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.47143516, -1.19097569,  1.43270697, -0.3126519 , -0.72058873,\n",
+       "        0.88716294,  0.85958841, -0.6365235 ,  0.01569637, -2.24268495])"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#To avoid global state, you can use numpy.random.RandomState to create a random number generator isolated from others\n",
+    "rng = np.random.RandomState(1234)\n",
+    "rng.randn(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "065a3acd-c10e-48f8-a058-4a1ac2cd27f2",
+   "metadata": {},
+   "source": [
+    "Python’s built-in random module, by contrast, only samples one value at a time. As\n",
+    "you can see from this benchmark, numpy.random is well over an order of magnitude\n",
+    "faster for generating very large samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "7833a4f4-8066-4c05-9b9c-f9c7f71feb1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "858 ms ± 14.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import normalvariate\n",
+    "\n",
+    "N = 1000000\n",
+    "\n",
+    "%timeit samples = [normalvariate(0, 1) for _ in range(N)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "b41906ab-1591-4387-911d-7bd08a7f5cd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36.7 ms ± 700 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit np.random.normal(size=N)"
    ]
   }
  ],
